# iCrab

./: .gitignore  Cargo.toml  Cross.toml  README.md  build.rs  build.sh  config.example.toml  rust-toolchain.toml
.github/workflows/: rust.yml
src/: agent.rs  config.rs  cron_runner.rs  heartbeat.rs  lib.rs  llm.rs  main.rs  memory.rs  skills.rs  sync.rs  telegram.rs  tools.rs  workspace.rs
src/agent/: context.rs  session.rs  subagent_manager.rs  summarize.rs
src/memory/: db.rs  indexer.rs
src/tools/: context.rs  cron.rs  file.rs  git.rs  grep_dir.rs  message.rs  registry.rs  result.rs  search.rs  search_chat.rs  spawn.rs  subagent.rs  web.rs
tests/: agent_tests.rs  common.rs  config_tests.rs  indexer_tests.rs  subagent_sync_tests.rs  subagent_tests.rs  telegram_tests.rs  tools_tests.rs
