[package]
name = "icrab"
version = "0.1.0"
edition = "2024"
rust-version = "1.92"
description = "Minimal openClaw style personal AI assistant that runs on an old iPhone as a server."
readme = "README.md"
license = "MIT"
repository = "https://github.com/Snehal-Reddy/iCrab"

[package.metadata.docs.rs]
targets = ["i686-unknown-linux-musl"]

[dependencies]
# Async runtime (poller, agent loop, cron, heartbeat)
tokio = { version = "1.41", features = ["full"] }
# SQLite persistence (bundled C library; works on i686-musl without host toolchain issues)
rusqlite = { version = "0.38", features = ["bundled"] }
# Config and API types (config.toml)
serde = { version = "1.0", features = ["derive"] }
toml = "0.9.8"
# HTTP + JSON. Reqwest 0.13 uses rustls with aws-lc (reliable on i686-musl); no ring.
reqwest = { version = "0.13", default-features = false, features = ["json", "rustls"] }
regex = "1.11"
serde_json = "1.0"
# Date for today + recent daily notes (YYYYMMDD)
time = { version = "0.3", default-features = false, features = ["formatting", "std"] }
# IANA timezone support for local-time system prompt line (DST-aware)
chrono    = { version = "0.4", default-features = false, features = ["std", "clock"] }
chrono-tz = { version = "0.10", default-features = false }

[dev-dependencies]
wiremock = "0.6"
tempfile = "3"
tokio = { version = "1.41", features = ["test-util"] }
serde_json = "1.0"

[profile.release]
lto = true
codegen-units = 1
strip = true
panic = "abort"

[profile.release.package."*"]
opt-level = 3
